# rig-aws

./: .gitignore  Cargo.toml  README.md
blogs/blog_1/: Blog_1_aws_lambda.md
blogs/blog_2/: Blog_2_aws_lambda_lancedb.md
langchain-entertainer-ecs/: Dockerfile  main.py
langchain-entertainer-lambda/: lambda_function.py
langchain-montreal-lancedb/: .dockerignore  Dockerfile  app.py  app_requirements.txt  lambda_function.py  loader.py  loader_requirements.txt  montreal.py  requirements.txt
rig-aws-lambda-rust/: Cargo.toml
rig-aws-lambda-rust/src/: main.rs
rig-entertainer-ecs/: Cargo.toml  Dockerfile
rig-entertainer-ecs/src/: main.rs
rig-entertainer-lambda/: Cargo.toml
rig-entertainer-lancedb-local/: Cargo.toml  README.md  payload.json
rig-entertainer-lancedb-local/src/: arrow_helper.rs  main.rs  spotify.rs
rig-entertainer-rust/: Cargo.toml
rig-entertainer-rust/src/: main.rs
rig-montreal-lancedb/: Cargo.toml  payload.json  template.yaml
rig-montreal-lancedb/efs/: loader_payload.json
rig-montreal-lancedb/efs/src/: spotify.rs
rig-montreal-lancedb/local/: Cargo.toml
rig-montreal-lancedb/local/src/: main.rs  spotify.rs
rig-montreal-lancedb/src/: arrow_helper.rs  lib.rs
rig-montreal-lancedb/src/montreal/: api.rs  mod.rs
rig-spotify-lancedb/: README.md
rig-spotify-lancedb/efs/: Cargo.toml  payload.json
rig-spotify-lancedb/efs/src/: lib.rs
rig-spotify-lancedb/src/: main.rs
