[package]
name = "rig-entertainer-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.91"
lambda_runtime = "0.13.0"
openssl = { version = "0.10.68", features = ["vendored"]}
rig-core = "0.3.0"
serde = "1.0.213"
serde_json = "1.0.132"
tokio = "1.41.0"
tracing-subscriber = "0.3.18"
