[package]
name = "rig-montreal-lancedb"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.91"
arrow-array = "52.2.0"
chrono = "0.4.38"
futures = "0.3.31"
lambda_runtime = "0.13.0"
lancedb = "0.10.0"
openssl = { version = "0.10.68", features = ["vendored"]}
reqwest = "0.12.8"
rig-core = { version = "0.3.0" }
rig-lancedb = { version = "0.1.0"}
serde = "1.0.213"
serde_json = "1.0.132"
tokio = "1.41.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
